Fix cookie vulnerability and improve GitHub Actions workflow
- Override cookie to 0.7.2 to fix GHSA-pxg6-pf52-xh8x vulnerability
- Update GitHub Actions to Node 22 with npm caching
- Add lint and type check steps before deployment
- Add concurrency control to cancel outdated deployments
- Use npm ci instead of npm install for more reliable CI builds

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
 		"vitest": "^4.0.7"
 	},
 	"type": "module",
+	"overrides": {
+		"cookie": "^0.7.2"
+	},
 	"lint-staged": {
 		"*.{js,ts,svelte}": [
 			"prettier --write",
